Fixes align position in print mode

--- a/print.css
+++ b/print.css
@@ -25,8 +25,9 @@ a:link, a:visited {
 	margin-top: 10px;
 }
 
-#infos, #content, #knowledge {
-	margin: px;
+#infos, #content, #knowledge, #profissional {
+	display: block;
+	margin: 0 auto;
 	padding: 10px;
 }
 
